# tidskollen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
data/: tidskollen.desktop
locale/sv/LC_MESSAGES/: tidskollen.mo
po/: sv.po  tidskollen.pot
po/locale/sv/LC_MESSAGES/: tidskollen.mo
src/tidskollen/: __main__.py  accessibility.py  export.py  main.py  profiles.py  window.py
