[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidskollen"
version = "0.2.3"
description = "Visual Time Timer for classrooms and children with autism"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    {name = "Daniel Nylander"}
]

[project.scripts]
tidskollen = "tidskollen.main:main"

[tool.setuptools.packages.find]
where = ["src"]
